c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/negate_void.c
int main(void) {
  -(void)10; // you can't negate void expressions, only arithmetic expressions
  return 0;
}